# hedgehog-rematch

./: .hlint.yaml  README.md  hedgehog-rematch.cabal
src/Hedgehog/: Rematch.hs
test/Hedgehog/: RematchSpec.hs
