name:                hedgehog-rematch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unisay/hedgehog-rematch#readme
license:             BSD3
license-file:        LICENSE
author:              Yuriy Lazaryev
maintainer:          Yuriy dot Lazaryev at gmail dot com
copyright:           2018 Yuriy Lazaryev
category:            learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hedgehog.Rematch
  build-depends:       base >= 4.7 && < 5
                     , hedgehog
                     , rematch
  default-language:    Haskell2010

test-suite hedgehog-rematch-testsuite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Driver.hs
  build-depends:       base
                     , rematch
                     , hedgehog
                     , hedgehog-rematch
                     , tasty
                     , tasty-hedgehog
                     , tasty-discover
  other-modules:       Hedgehog.RematchSpec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/unisay/hedgehog-rematch
